Javascript Projects Addes

--- a/24/24/app.html
+++ b/24/24/app.html
@@ -19,7 +19,9 @@
     <div class="intro">This is a div with the class "intro".</div>
     <button id="action-button">Click Me!</button>
 
+    
     <div id="myBox">Click me 😍</div>
+    <button id="myButton">Click Me!</button>
 
     <script src="app.js"></script>
 </body>
