--- a/Part 2 JavascriptProjects/04RockPaperScissorBFend/frontend/app.html
+++ b/Part 2 JavascriptProjects/04RockPaperScissorBFend/frontend/app.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Rock-Paper-Scissors</h1>
+        <h1><span>R</span>ock-<span>P</span>aper-<span>S</span>cissors</h1>
         <button id="logoutButton">Logout</button>
         <button id="themeToggle">🌙 Dark Mode</button>
     </header>
